# JobPrep

./: .env.sample  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
engine/browser/: controller.py
engine/parsers/: market_research.py  resume_parser.py
engine/roadmap/: gap_analysis.py  generator.py  schemas.py
src/: App.jsx  index.html  styles.css  tailwind-config.js
src/components/: AgentCard.jsx  BriefingCard.jsx  ConfidencePill.jsx  Field.jsx  KPI.jsx  KeyField.jsx  LogLine.jsx  OutcomeTag.jsx  PageHeader.jsx  PanelHeader.jsx  RelevanceMeter.jsx  ResumeDropzone.jsx  Sidebar.jsx  SliderRow.jsx  SourceItem.jsx  Stat.jsx  StatusBadge.jsx  SteerModal.jsx  ToggleRow.jsx
src/data/: mockData.js
src/styles/: global.css
src/utils/: style.js  time.js
src/views/: Dashboard.jsx  History.jsx  Onboarding.jsx  RunAgent.jsx  Settings.jsx
src/views/briefing/: Briefing.jsx
src/views/briefing/tabs/: CompTab.jsx  CompanyTab.jsx  GapsTab.jsx  InterviewerTab.jsx  MarketTab.jsx  MemoTab.jsx  NewsTab.jsx  QuestionsTab.jsx  RoadmapTab.jsx  StoriesTab.jsx
tests/: conftest.py
