[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobprep"
version = "0.1.0"
description = "Career intelligence tool — research the job market and generate a personalized roadmap"
requires-python = ">=3.12"
dependencies = [
    # LLM
    "anthropic>=0.25",
    # Browser automation
    "playwright>=1.44",
    # PDF parsing
    "pdfplumber>=0.11",
    # Search
    "tavily-python>=0.3",
    # Data / validation
    "pydantic>=2.7",
    "sqlmodel>=0.0.18",
    # Vector store
    "chromadb>=0.5",
    # CLI
    "typer>=0.12",
    "rich>=13",
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
jobprep = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
